--- a/Dockerfile.render
+++ b/Dockerfile.render
@@ -23,13 +23,8 @@ COPY . .
 # version is pulled from git, but git doesn't trust the directory due to different owners
 RUN git config --global --add safe.directory /home/node
 
-# install frontend dependencies (without frozen-lockfile since yarn.lock might not exist)
-# Add retry mechanism and network timeout configuration with fallback registry
-RUN yarn config set network-timeout 300000 && \
-    yarn config set registry https://registry.yarnpkg.com && \
-    yarn install --network-timeout 300000 || \
-    (echo "Retrying with npm registry..." && yarn config set registry https://registry.npmjs.org && yarn install --network-timeout 300000) || \
-    (echo "Final retry..." && sleep 30 && yarn install --network-timeout 300000)
+# install frontend dependencies using npm (more reliable than yarn for this case)
+RUN npm install
 
 RUN INTERACTIVE=false CI=true MB_EDITION=$MB_EDITION bin/build.sh :version ${VERSION}
 
