--- a/Dockerfile.render
+++ b/Dockerfile.render
@@ -23,8 +23,8 @@ COPY . .
 # version is pulled from git, but git doesn't trust the directory due to different owners
 RUN git config --global --add safe.directory /home/node
 
-# install frontend dependencies using npm (more reliable than yarn for this case)
-RUN npm install
+# install frontend dependencies using npm with legacy peer deps to resolve React conflicts
+RUN npm install --legacy-peer-deps
 
 RUN INTERACTIVE=false CI=true MB_EDITION=$MB_EDITION bin/build.sh :version ${VERSION}
 
