--- a/Dockerfile.render
+++ b/Dockerfile.render
@@ -54,7 +54,10 @@ RUN apk add -U bash fontconfig curl font-noto font-noto-arabic font-noto-hebrew 
 
 # add Metabase script and uberjar
 COPY --from=builder /home/node/target/uberjar/metabase.jar /app/
-COPY bin/docker/run_metabase.sh /app/
+COPY run_metabase_debug.sh /app/run_metabase.sh
+
+# Make run script executable and add debugging
+RUN chmod +x /app/run_metabase.sh
 
 # expose our default runtime port
 EXPOSE 3000
